--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
 	<link href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/colors.css">
+	<link href="https://fonts.googleapis.com/css?family=Diplomata+SC|Orbitron" rel="stylesheet">
 	<base href="/">
 </head>
 <body ng-app="agrandel">
