--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script>
-<script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
+<!-- <script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script> -->
+<!-- <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script> -->
 <script type="text/javascript" src="app/app.js"></script>
 <!-- Factories -->
 <script type="text/javascript" src="app/scripts.js"></script>
